--- a/index.html
+++ b/index.html
@@ -1,1 +1,186 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="Haici Yang">
+
+  <title>Haici Yang</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/small-business.css" rel="stylesheet">
+
+	  <!-- Custom styles for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
+	<!-- Custom styles for this template -->
+  <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/blog/">
+
+  <link href="blog.css" rel="stylesheet">
+  <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+</head>
+
+<body>
+
+  <!-- Navigation -->
+  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top"> -->
+    <div class="container">
+<!-- 		 <header class="blog-header py-3">
+		    <div class="row flex-nowrap justify-content-between align-items-center">
+		      <div class="col-4 pt-1">
+		        <a class="text-muted" href="#">Subscribe</a>
+		      </div>
+		      <div class="col-4 text-center">
+		        <a class="blog-header-logo text-dark" href="#">Large</a>
+		      </div>
+		      <div class="col-4 d-flex justify-content-end align-items-center">
+		        <a class="text-muted" href="#">
+		          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24" focusable="false"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
+		        </a>
+		        <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
+		      </div>
+		    </div>
+		  </header> -->
+		 <div class="nav-scroller py-1 mb-2">
+		    <nav class="nav d-flex justify-content-between">
+		      <a class="p-2 text-muted" href="#"><h4>Haici Yang</h4></a>
+		      <a class="p-2 text-muted" href="researches.html">Researches</a>
+		      <a class="p-2 text-muted" href="resume.html">Resume</a>
+		      <a class="p-2 text-muted" href="blog.html">Blog</a>
+
+		    </nav>
+ 		 </div>
+      <!-- <a class="navbar-brand" href="#"></a> -->
+<!--       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button> -->
+      <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="researches.html">Researches</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="publications.html">Publications</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="CV.pdf">Resume</a>
+          </li>
+        </ul>
+      </div> -->
+    </div>
+  <!-- </nav> -->
+
+  <!-- Page Content -->
+  <div class="container">
+
+    <!-- Heading Row -->
+    <div class="row align-items-center my-5">
+      <div class="col-lg-4">
+        <img class="img-fluid rounded mb-4 mb-lg-0" src="homepic.jpg" alt="">
+      </div>
+      <!-- /.col-lg-8 -->
+      <div class="col-lg-8">
+        <h1>Haici Yang </h1> 
+        <h4 class="font-weight-light">(Pronouce like: hai·ts· yan)  </h4>
+        <h3 class="font-weight-light">海慈 杨 </h3>
+        <p>I'm a PhD student in Indiana University Bloomington, advised by Professor <a href="#">Minje Kim</a> in <a href='#'>Signals and AI Group in Engineering. </a> My interest lies mainly on how machine learning methods in signal processing and music processing specifically.  </p>
+        <!-- <a class="btn btn-primary" href="#">Call to Action!</a> -->
+      </div>
+      <!-- /.col-md-4 -->
+    </div>
+    <!-- /.row -->
+
+    <!-- Call to Action Well -->
+    <!-- <div class="card text-white bg-secondary my-5 py-4 text-center">
+      <div class="card-body">
+        <p class="text-white m-0">Here is missing a tagline to motivate (make fun of) PhD students</p>
+      </div>
+    </div> -->
+    <h1>News</h1>
+      <p>Oops! No significant news yet!</p>
+    <!-- Content Row -->
+<!--     <div class="row">
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Card One</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary btn-sm">More Info</a>
+          </div>
+        </div>
+      </div>
+      <!-- /.col-md-4 -->
+      <!-- <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Card Two</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary btn-sm">More Info</a>
+          </div>
+        </div>
+      </div> -->
+      <!-- /.col-md-4 -->
+     <!--  <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Card Three</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary btn-sm">More Info</a>
+          </div>
+        </div>
+      </div> -->
+      <!-- /.col-md-4 -->
+
+    </div> 
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
+  <!-- Footer -->
+  <footer class="py-2 bg-warning">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Haici Yang's Website 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
+</html>
