--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <!-- /.col-lg-8 -->
       <div class="col-lg-8">
         <h1>Haici Yang </h1> 
-        <h4 class="font-weight-light">(Pronouce like: hai·ts· yan)  </h4>
+        <h4 class="font-weight-light">(Pronouced as: hī·ts·yəNG)  </h4>
         <h3 class="font-weight-light">海慈 杨 </h3>
         <p>I'm a PhD student in Indiana University Bloomington, advised by Professor <a href="#">Minje Kim</a> in <a href='#'>Signals and AI Group in Engineering. </a> My interest lies mainly on how machine learning methods in signal processing and music processing specifically.  </p>
         <!-- <a class="btn btn-primary" href="#">Call to Action!</a> -->
