--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
 
     <!-- Heading Row -->
     <div class="row align-items-center my-5">
-      <div class="col-lg-4">
+      <div class="col-lg-5">
         <img class="img-fluid rounded mb-4 mb-lg-0" src="homepic.jpg" alt="">
       </div>
       <!-- /.col-lg-8 -->
-      <div class="col-lg-8">
+      <div class="col-lg-7">
         <h1>Haici Yang </h1> 
         <h4 class="font-weight-light">(Pronouced as: hī·ts·yəNG)  </h4>
         <h3 class="font-weight-light">海慈 杨 </h3>
-        <p>I'm a PhD student in Indiana University Bloomington, advised by Professor <a href="#">Minje Kim</a> in <a href='#'>Signals and AI Group in Engineering. </a> My interest lies mainly on how machine learning methods in signal processing and music processing specifically.  </p>
+        <p>I'm currently (Nov.2019) a first year graduate student in Indiana University Bloomington, advised by Professor <a href="#">Minje Kim</a> in <a href='#'>Signals and AI Group in Engineering. </a> My interest lies on applying machine learning methods in signal processing and music processing specifically.  </p>
         <!-- <a class="btn btn-primary" href="#">Call to Action!</a> -->
       </div>
       <!-- /.col-md-4 -->
