--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h1>Haici Yang </h1> 
         <h4 class="font-weight-light">(Pronouced as: hī·ts·yəNG)  </h4>
         <h3 class="font-weight-light">海慈 杨 </h3>
-        <p>I'm currently (Nov.2019) a first year graduate student in Indiana University Bloomington, advised by Professor <a href="#">Minje Kim</a> in <a href='#'>Signals and AI Group in Engineering. </a> My interest lies on applying machine learning methods in signal processing and music processing specifically.  </p>
+        <p>I'm currently (Nov.2019) a first year graduate student in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="#">Minje Kim</a> in <a href='#'>Signals and AI Group in Engineering. </a> My interest lies on applying machine learning methods in signal processing and music processing specifically.  </p>
         <!-- <a class="btn btn-primary" href="#">Call to Action!</a> -->
       </div>
       <!-- /.col-md-4 -->
