--- a/researches.html
+++ b/researches.html
@@ -99,7 +99,7 @@
 
 <!--         <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p> -->
         <br>
-        <h4 class="pb-2 mb-4"> •  I'm Currently Working on </h4>
+        <h4 class="pb-2 mb-4"> I'm Currently Working on </h4>
         <!-- <ul>
           <li><h5>Neural Audio Coding</h5>
               <p class="blog-post-meta"> Jan.2020 - Current    <a href="index.html">Haici Yang</a></p>
@@ -120,10 +120,10 @@
             </div>
           </div>
         </ul>
-        
+        <hr>
         
         <br>
-        <h4 class="pb-2 mb-2"> •  Previous Projects</h4>
+        <h4 class="pb-2 mb-2"> Previous Projects</h4>
         <!-- <h2 class="blog-post-title"></h2> -->
         <!-- <p class="blog-post-meta">Nov 23, 2019 by <a href="index.html">Haici</a></p> -->
         <div class="row mb-4">
