--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
      <div class="nav-scroller mb-2">
         <nav class="nav d-flex justify-content-between">
           <a class="p-2 text-muted" href="index.html"><h4>Haici Yang</h4></a>
-          <a class="p-2 text-muted" href="researches.html">Researches</a>
+          <a class="p-2 text-muted" href="researches.html">Research</a>
           <a class="p-2 text-muted" href="resume.html">Resume</a>
           <a class="p-2 text-muted" href="blog.html"><strong>Blog</strong></a>
 
