--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		 <div class="nav-scroller py-1 mb-2">
 		    <nav class="nav d-flex justify-content-between">
 		      <a class="p-2 text-muted" href="#"><h4>Haici Yang</h4></a>
-		      <a class="p-2 text-muted" href="researches.html">Researches</a>
+		      <a class="p-2 text-muted" href="researches.html">Research</a>
 		      <a class="p-2 text-muted" href="resume.html">Resume</a>
 		      <a class="p-2 text-muted" href="blog.html">Blog</a>
 
