--- a/researches.html
+++ b/researches.html
@@ -79,7 +79,7 @@
      <div class="nav-scroller mb-2">
         <nav class="nav d-flex justify-content-between">
           <a class="p-2 text-muted" href="index.html"><h4>Haici Yang</h4></a>
-          <a class="p-2 text-muted" href="researches.html"><strong>Researches</strong></a>
+          <a class="p-2 text-muted" href="researches.html"><strong>Research</strong></a>
           <a class="p-2 text-muted" href="resume.html">Resume</a>
           <a class="p-2 text-muted" href="blog.html">Blog</a>
 
@@ -137,7 +137,7 @@
                 <h3 class="mb-0">Text Mining and Distant Reading on SongYuanXueAn</h3>
                 <div class="mb-1 text-muted">May.2018</div>
                 <p class="card-text mb-auto">This is a digital humanity project. Network analysis and word embedding was conducted on the text data extracted from an ancient chinese book - SongYuanXueAn.</p>
-                <a href="#" class="stretched-link">More</a>
+                <!-- <a href="#" class="stretched-link">More</a> -->
               </div>
               <div class="col-auto d-none d-lg-block">
                 <img class="bd-placeholder-img" width="200" height="350" src="proj1.png" alt="">
