--- a/resume.html
+++ b/resume.html
@@ -72,7 +72,7 @@
      <div class="nav-scroller mb-2">
         <nav class="nav d-flex justify-content-between">
           <a class="p-2 text-muted" href="index.html"><h4>Haici Yang</h4></a>
-          <a class="p-2 text-muted" href="researches.html">Researches</a>
+          <a class="p-2 text-muted" href="researches.html">Research</a>
           <a class="p-2 text-muted" href="resume.html"><strong>Resume</strong></a>
           <a class="p-2 text-muted" href="blog.html">Blog</a>
 
@@ -103,8 +103,8 @@
               <h4 class="font-italic">Elsewhere</h4>
               <ol class="list-unstyled">
                 <li><a href="https://github.com/haiciyang">GitHub</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Facebook</a></li>
+                <li><a href="https://twitter.com/HaiciYang">Twitter</a></li>
+                <li><a href="https://www.goodreads.com/user/show/105461783-haici-y">goodreads</a></li>
               </ol>
             </div>
         </div>
