--- a/resume.html
+++ b/resume.html
@@ -136,27 +136,27 @@
               <h4 id="list-item-2">Publications</h4>
                <ul>
                 <!-- <li> -->
-                  <h5 class="font-italic"> Master Thesis</h5>
-                  <ul>
-                    <p><strong>Haici Yang.</strong> “Network Extraction and Analysis on SongYuanXueAn -- Word   Embedding Application on Chinese Traditional Text”. Peking University. 2019 (In Chinese)</p>
-                  </ul>
-                <!-- </li> -->
-                <h5 class="font-italic">Journal Publications</h5>
-                  <ul>
-                    <p><strong>Haici Yang</strong>, Jun Wang. “Construction and Visualization of Knowledge Graph on Academic Relationships among People in Song Dynasty”. Data Analysis and Knowledge Discovery, vol. 3, no. 6, 2019, pp. 109-116.(In Chinese) (<a href ="kvlab.org/cbdb_kg">Demo<a>) </p>
-                    <p><strong>Haici Yang</strong>, Yuzhen Sang, Shenglong Han. “Research on the Interaction Mechanism Between Urbanization and Digital Divide”. Library Tribune, vol. 7, 2019, pp. 34-41. (In Chinese)</p>
-                    <p>Jian Jin, <strong>Haici Yang</strong>. “A Topic Relevance Aware Model for Reviewer Recommendation”, Digital Library Forum, vol. 4, 2017, pp. 47-55. (In Chinese)</p>
-                    <p>Chong Wang, Beiwei Xu, <strong>Haici Yang</strong>. “Consumer’s Risk Behavior Model: Modeling to Control the Price Increase of Limited Property Housing”, Modern Urban Research, vol. 11, 2017, pp. 57-62. (In Chinese)</p>
-                  </ul>
-                  <h5 class="font-italic">Conference Papers in Review</h5>
+                  <h5 class="font-italic">Conference Papers</h5>
                     <ul>
                     <p>Sunwoo Kim; <strong>Haici Yang</strong>; Minje Kim. Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation.
                     <br><em>‘ICASSP 2020’</em>
                     </p>
                     <p> Zhang, Liyuan; Wang, Jun; <strong>Yang, Haici</strong>. Can Digital Humanities Help in Finding Research Questions? A Comparative Analysis of the Attitudes Towards Neo-Confucianism Study of Scholars Today and 300 Years Ago. 
-                    <br><em>‘DH2020’</em>
+                    <br><em>‘DH2020’, in Review</em>
                     </p>
                   </ul>
+                  <h5 class="font-italic"> Domestic Publications (in Chinese)</h5>
+                  <ul>
+                    <p><strong>Haici Yang.</strong> “Network Extraction and Analysis on SongYuanXueAn -- Word   Embedding Application on Chinese Traditional Text”. Peking University. 2019 </p>
+                  </ul>
+                <!-- </li> -->
+                  <ul>
+                    <p><strong>Haici Yang</strong>, Jun Wang. “Construction and Visualization of Knowledge Graph on Academic Relationships among People in Song Dynasty”. Data Analysis and Knowledge Discovery, vol. 3, no. 6, 2019, pp. 109-116. (<a href ="kvlab.org/cbdb_kg">Demo<a>) </p>
+                    <p><strong>Haici Yang</strong>, Yuzhen Sang, Shenglong Han. “Research on the Interaction Mechanism Between Urbanization and Digital Divide”. Library Tribune, vol. 7, 2019, pp. 34-41. </p>
+                    <p>Jian Jin, <strong>Haici Yang</strong>. “A Topic Relevance Aware Model for Reviewer Recommendation”, Digital Library Forum, vol. 4, 2017, pp. 47-55. </p>
+                    <p>Chong Wang, Beiwei Xu, <strong>Haici Yang</strong>. “Consumer’s Risk Behavior Model: Modeling to Control the Price Increase of Limited Property Housing”, Modern Urban Research, vol. 11, 2017, pp. 57-62. </p>
+                  </ul>
+                  
                </ul>
                <br>
               <h4 id="list-item-3">Work Experience</h4><br>
