--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h1>Haici Yang </h1> 
         <h4 class="font-weight-light">(Pronouced as: hī·ts·yəNG)  </h4>
         <h3 class="font-weight-light">海慈 杨 </h3>
-        <p>I'm currently (Nov.2019) a first year graduate student in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="#">Minje Kim</a> in <a href='#'>Signals and AI Group in Engineering. </a> My interest lies on applying machine learning methods in signal processing and music processing specifically.  </p>
+        <p>I'm currently (Nov.2019) a first year graduate student in Intelligent System Engineering at Indiana University Bloomington, advised by Professor <a href="https://minjekim.com/">Minje Kim</a> in <a href='http://saige.sice.indiana.edu/'>Signals and AI Group in Engineering. </a> My interest lies on applying machine learning methods in signal processing and music processing specifically.  </p>
         <!-- <a class="btn btn-primary" href="#">Call to Action!</a> -->
       </div>
       <!-- /.col-md-4 -->
@@ -123,7 +123,8 @@
       </div>
     </div> -->
     <h1>News</h1>
-      <p>Oops! No significant news yet!</p>
+      <il></ol>> My 2nd-authored paper <i>Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation</i> got accepted by ICASSP 2020! Congrats to <a href="https://www.kimsunwoo.com/">Sun Woo</a>!
+      </il>
     <!-- Content Row -->
 <!--     <div class="row">
       <div class="col-md-4 mb-5">
