--- a/resume.html
+++ b/resume.html
@@ -105,6 +105,7 @@
                 <li><a href="https://github.com/haiciyang">GitHub</a></li>
                 <li><a href="https://twitter.com/HaiciYang">Twitter</a></li>
                 <li><a href="https://www.goodreads.com/user/show/105461783-haici-y">goodreads</a></li>
+                <li><a href="https://www.douban.com/people/181815087/">豆瓣</a></li>
               </ol>
             </div>
         </div>
