--- a/index.html
+++ b/index.html
@@ -123,8 +123,13 @@
       </div>
     </div> -->
     <h1>News</h1>
-      <il></ol>> My 2nd-authored paper <i>Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation</i> got accepted by ICASSP 2020! Congrats to <a href="https://www.kimsunwoo.com/">Sun Woo</a>!
-      </il>
+      <ul class="list-unstyled">
+        <il>  My 2nd-authored paper <i>Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation</i> got accepted by ICASSP 2020! Congrats to <a href="https://www.kimsunwoo.com/">Sun Woo</a>!
+        </il>
+        <il>  Abstract of paper <i>Can Digital Humanities Help in Finding Research Questions? A Comparative Analysis of the Attitudes Towards Neo-Confucianism Study of the Scholars Today and 300 Years Ago<i>  which is an extension study of my master thesis, was accepted by <a href='https://dh2020.adho.org/'>DH2020</a>. 
+        </il>
+
+      </ul>
     <!-- Content Row -->
 <!--     <div class="row">
       <div class="col-md-4 mb-5">
