Removed blog; added paper

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		      <a class="p-2 text-muted" href="#"><h4>Haici Yang</h4></a>
 		      <a class="p-2 text-muted" href="researches.html">Research</a>
 		      <a class="p-2 text-muted" href="resume.html">Resume</a>
-		      <a class="p-2 text-muted" href="blog.html">Blog</a>
+		      <!-- <a class="p-2 text-muted" href="blog.html">Blog</a> -->
 
 		    </nav>
  		 </div>
