--- a/researches.html
+++ b/researches.html
@@ -81,7 +81,7 @@
           <a class="p-2 text-muted" href="index.html"><h4>Haici Yang</h4></a>
           <a class="p-2 text-muted" href="researches.html"><strong>Research</strong></a>
           <a class="p-2 text-muted" href="resume.html">Resume</a>
-          <a class="p-2 text-muted" href="blog.html">Blog</a>
+          <!-- <a class="p-2 text-muted" href="blog.html">Blog</a> -->
 
         </nav>
      </div>
