--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
           <a class="p-2 text-muted" href="index.html"><h4>Haici Yang</h4></a>
           <a class="p-2 text-muted" href="researches.html">Research</a>
           <a class="p-2 text-muted" href="resume.html"><strong>Resume</strong></a>
-          <a class="p-2 text-muted" href="blog.html">Blog</a>
+          <!-- <a class="p-2 text-muted" href="blog.html">Blog</a> -->
 
         </nav>
      </div>
@@ -146,6 +146,13 @@
                     <br><em>‘DH2020’</em>
                     </p>
                   </ul>
+                  <h5 class="font-italic">Conference Papers in Review</h5>
+                    <ul>
+                    <p><strong>Haici Yang</strong>; Seungkwon Beack; Minje Kim. Source-Aware Neural Speech Coding for Noisy Speech Compression.
+                    <br><em>‘INTERSPEECH 2020’</em>
+                    </p>
+                    </ul>
+
                   <h5 class="font-italic"> Domestic Publications (in Chinese)</h5>
                   <ul>
                     <p><strong>Haici Yang.</strong> “Network Extraction and Analysis on SongYuanXueAn -- Word   Embedding Application on Chinese Traditional Text”. Peking University. 2019 </p>
