Changes made in 2020 Sep

--- a/researches.html
+++ b/researches.html
@@ -108,10 +108,17 @@
         <div class="col-md-6">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-warning">Deep Learning · </strong>
-                <h3 class="mb-0">Neural Audio Coding</h3>
+                <strong class="d-inline-block mb-2 text-warning">Audio Coding</strong>
+                <h3 class="mb-0">Source-Aware Neural Audio Coding (SANAC)</h3>
                 <div class="mb-1 text-muted">Jan.2020 - Current</div>
-                <p class="card-text mb-auto">More contents coming soon</p>
+
+                <p class="card-text mb-auto">The intuition of the coding problem is to target the use case where source speech is observed as a mixture with background sound. It is to address the common situations, where people would like to know the environmental status of the speaker, even though they still pay the most attention to the speech content.
+                </p>
+                <br>
+
+                <p class="card-text mb-auto">We harmonized the source separation concept into the coding system, so that its encoder predicts the speech and noise code vectors defined in their own latent spaces</p>
+                <br>
+                <p><a href="https://saige.sice.indiana.edu/research-projects/sanac/">[Demo]  </a><a href="https://arxiv.org/abs/2008.12889">[Paper]</a></p>
                 <!-- <a href="#" class="stretched-link">More</a> -->
               </div>
               <!-- <div class="col-auto d-none d-lg-block">
@@ -123,7 +130,7 @@
         <hr>
         
         <br>
-        <h4 class="pb-2 mb-2"> Previous Projects</h4>
+        <h4 class="pb-2 mb-2"> Previous Projects in Digital Humanities</h4>
         <!-- <h2 class="blog-post-title"></h2> -->
         <!-- <p class="blog-post-meta">Nov 23, 2019 by <a href="index.html">Haici</a></p> -->
         <div class="row mb-4">
@@ -153,7 +160,7 @@
                 <h3 class="mb-0">Knowledge Graph Construction of People In Song Dynasty</h3>
                 <div class="mb-1 text-muted">Apr.2017</div>
                 <p class="card-text mb-auto">I built a knowledge graph based on data from CBDB dataset. Feel free to explore scholars and politicians' social network in China a thousand years ago (from AC 900 to AC 1200) by clicking here.</p>
-                <a href="http://dh.kvlab.org/cbdb_kg/index-en.html" class="stretched-link">More</a>
+                <a href="http://dh.kvlab.org/cbdb_kg/index-en.html" class="stretched-link">[Demo]</a>
               </div>
               <div class="col-auto d-none d-lg-block">
                 <img class="bd-placeholder-img" width="200" height="350" src="proj2.png" alt="">
