--- a/resume.html
+++ b/resume.html
@@ -103,7 +103,6 @@
               <h4 class="font-italic">Elsewhere</h4>
               <ol class="list-unstyled">
                 <li><a href="https://github.com/haiciyang">GitHub</a></li>
-                <li><a href="https://twitter.com/HaiciYang">Twitter</a></li>
                 <li><a href="https://www.goodreads.com/user/show/105461783-haici-y">goodreads</a></li>
                 <li><a href="https://www.douban.com/people/181815087/">豆瓣</a></li>
               </ol>
@@ -114,6 +113,8 @@
         </div>
         <div class="col-md-8">
             <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example">
+              <a href="haici_yang_CV.pdf">[Download PDF CV]</a> <br>
+              <br>
               <h4 id="list-item-1">Education</h4>
                 <ul>
                   <li> 
@@ -139,17 +140,20 @@
                 <!-- <li> -->
                   <h5 class="font-italic">Conference Papers</h5>
                     <ul>
-                    <p>Sunwoo Kim; <strong>Haici Yang</strong>; Minje Kim. Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation.
-                    <br><em>‘ICASSP 2020’</em>
+                    <p>Kim, Sunwoo, <strong>Haici Yang</strong>, and Minje Kim. "Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation." ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). IEEE, 2020.</p>
+                    <!-- <br><em>‘ICASSP 2020’</em> -->
                     </p>
+                    <p><strong>Yang, H.</strong>, Beack, S. and Kim, M., 2020. Source-Aware Neural Speech Coding for Noisy Speech Compression. arXiv preprint arXiv:2008.12889.</p>
+
                     <p> Zhang, Liyuan; Wang, Jun; <strong>Yang, Haici</strong>. Can Digital Humanities Help in Finding Research Questions? A Comparative Analysis of the Attitudes Towards Neo-Confucianism Study of Scholars Today and 300 Years Ago. 
                     <br><em>‘DH2020’</em>
                     </p>
                   </ul>
-                  <h5 class="font-italic">Conference Papers in Review</h5>
+                  <h5 class="font-italic">Journal Papers</h5>
+                  <!-- <h5 class="font-italic">Conference Papers in Review</h5> -->
                     <ul>
-                    <p><strong>Haici Yang</strong>; Seungkwon Beack; Minje Kim. Source-Aware Neural Speech Coding for Noisy Speech Compression.
-                    <br><em>‘INTERSPEECH 2020’</em>
+                    <p>
+                      Börner, K., Scrivner, O., Cross, L.E., Gallant, M., Ma, S., Martin, A.S., Record, E., <strong>Yang, H.</strong> and Dilger, J.M., 2020. Mapping the co-evolution of artificial intelligence, robotics, and the internet of things over 20 years (1998-2017). arXiv preprint arXiv:2006.02366.
                     </p>
                     </ul>
 
@@ -162,22 +166,32 @@
                     <p><strong>Haici Yang</strong>, Jun Wang. “Construction and Visualization of Knowledge Graph on Academic Relationships among People in Song Dynasty”. Data Analysis and Knowledge Discovery, vol. 3, no. 6, 2019, pp. 109-116. (<a href ="kvlab.org/cbdb_kg">Demo<a>) </p>
                     <p><strong>Haici Yang</strong>, Yuzhen Sang, Shenglong Han. “Research on the Interaction Mechanism Between Urbanization and Digital Divide”. Library Tribune, vol. 7, 2019, pp. 34-41. </p>
                     <p>Jian Jin, <strong>Haici Yang</strong>. “A Topic Relevance Aware Model for Reviewer Recommendation”, Digital Library Forum, vol. 4, 2017, pp. 47-55. </p>
-                    <p>Chong Wang, Beiwei Xu, <strong>Haici Yang</strong>. “Consumer’s Risk Behavior Model: Modeling to Control the Price Increase of Limited Property Housing”, Modern Urban Research, vol. 11, 2017, pp. 57-62. </p>
                   </ul>
                   
                </ul>
                <br>
               <h4 id="list-item-3">Work Experience</h4><br>
-                 <ul>                  
-                    <h6><strong>Indiana Univeristy</strong>   Bloomington, IN</h6>
-                      <strong><em>Research Assitant</em></strong>  • Jan. 2020 - Current
+                 <ul>     
+                    <h5><strong>Amazon.com, Inc. </strong> </h5>  
+                      <em>Applied Scientist in Alexa Speech</em><br>
+                      Bloomington, IN (remote)• Summer 2020
+                      <ul>
+                        <li>Conducted extensive research to gain comprehensive understanding of popular approaches in speaker recognition;  </li>
+                        <li>Explored non-local convolutional neural network on speaker recognition and achieved state-of-the-art performance.</li>
+                      </ul>
+                    <br>
+
+                    <h5><strong>Indiana Univeristy</strong></h5>
+                      <em>Research Assitant</em> <br>
+                      Bloomington, IN • Jan. 2020 - Current
                       <ul>
                         <li> Project: Neural Audio Coding </li>
                       </ul>
                     <br>
                   
-                    <h6><strong>Cyberinfrustructure Network Science Center</strong>   Bloomington, IN</h6>
-                      <strong><em>Research Assitant </em></strong>• Aug 2018 – Mar 2019
+                    <h5><strong>Cyberinfrustructure Network Science Center</strong> </h5>
+                      <em>Research Assitant </em><br>
+                      Bloomington, IN• Aug 2018 – Mar 2019
                       <ul>
                         <li>
                           Designed and developed work flows as well as python functions for geography visualization and visualization of keyword burst in the context of science of science.
@@ -188,8 +202,9 @@
                       </ul>
                       <br>
 
-                    <h6><strong>WWF China</strong>   Beijing, China</h6>
-                      <strong><em>Analyst Intern</em></strong> • Summer 2018
+                    <h5><strong>WWF China</strong> </h5>
+                      <em>Analyst Intern</em> <br>
+                       Beijing, China • Summer 2018
                       <ul>
                         <li>
                           Website design and development for HR department
@@ -197,19 +212,9 @@
                       </ul>
                       <br>
 
-                     <h6><strong>Zhiyuan Synergy Software Co.</strong>  Beijing, China</h6>
-                      <strong><em>UI Intern</em></strong> • Summer 2017
-                      <ul>
-                        <li>
-                          UI design and test for academic adaption update.
-                        </li>
-                        <li>
-                          Conducted user study in academic market of China
-                        </li>
-                      </ul><br>
-
-                    <h6><strong>Nielsen</strong>   Beijing, China</h6>
-                      <strong><em>Analyst Intern</em></strong> • Summer 2016
+                    <h5><strong>Nielsen</strong> </h5>  
+                      <em>Analyst Intern</em><br>
+                      Beijing, China • Summer 2016
                       <ul>
                         <li>
                           Co-produced a data driven user study report with database and R in Telecom Group
