--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
     <!-- Heading Row -->
     <div class="row align-items-center my-5">
-      <div class="col-lg-5">
-        <img class="img-fluid rounded mb-4 mb-lg-0" src="homepic3.jpg" alt="">
+      <div class="col-lg-4">
+        <img class="img-fluid rounded mb-4 mb-lg-0" src="homepic.jpg" alt="">
       </div>
       <!-- /.col-lg-8 -->
       <div class="col-lg-7">
