--- a/resume.html
+++ b/resume.html
@@ -143,17 +143,21 @@
                     <p>Kim, Sunwoo, <strong>Haici Yang</strong>, and Minje Kim. "Boosted Locality Sensitive Hashing: Discriminative Binary Codes for Source Separation." ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). IEEE, 2020.</p>
                     <!-- <br><em>‘ICASSP 2020’</em> -->
                     </p>
+
                     <p><strong>Yang, H.</strong>, Beack, S. and Kim, M., 2020. Source-Aware Neural Speech Coding for Noisy Speech Compression. arXiv preprint arXiv:2008.12889.</p>
+                    <br><em>‘ICASSP 2021’</em>
+
+                    <p><strong>Yang, H.</strong>, Mao, H., Li, R., Ju, C.J. and Elibol, O., 2020. Non-local convolutional neural networks (nlcnn) for speaker recognition. arXiv preprint arXiv:2011.03682.</p>
 
                     <p> Zhang, Liyuan; Wang, Jun; <strong>Yang, Haici</strong>. Can Digital Humanities Help in Finding Research Questions? A Comparative Analysis of the Attitudes Towards Neo-Confucianism Study of Scholars Today and 300 Years Ago. 
-                    <br><em>‘DH2020’</em>
+                    <br><em>‘Digital Humanities 2020’</em>
                     </p>
                   </ul>
                   <h5 class="font-italic">Journal Papers</h5>
                   <!-- <h5 class="font-italic">Conference Papers in Review</h5> -->
                     <ul>
                     <p>
-                      Börner, K., Scrivner, O., Cross, L.E., Gallant, M., Ma, S., Martin, A.S., Record, E., <strong>Yang, H.</strong> and Dilger, J.M., 2020. Mapping the co-evolution of artificial intelligence, robotics, and the internet of things over 20 years (1998-2017). arXiv preprint arXiv:2006.02366.
+                      Börner K, et al. (2020) Mapping the co-evolution of artificial intelligence, robotics, and the internet of things over 20 years (1998-2017). PLoS ONE 15(12): e0242984. https://doi.org/10.1371/journal.pone.0242984
                     </p>
                     </ul>
 
@@ -176,8 +180,8 @@
                       <em>Applied Scientist in Alexa Speech</em><br>
                       Bloomington, IN (remote)• Summer 2020
                       <ul>
-                        <li>Conducted extensive research to gain comprehensive understanding of popular approaches in speaker recognition;  </li>
-                        <li>Explored non-local convolutional neural network on speaker recognition and achieved state-of-the-art performance.</li>
+                        <li>Supervisor: Oguz Elibol, Hongda Mao  </li>
+                        <li>Project: Non-local Convolutional Neural Networks (NLCNN) For Speaker Recognition</li>
                       </ul>
                     <br>
 
@@ -185,6 +189,7 @@
                       <em>Research Assitant</em> <br>
                       Bloomington, IN • Jan. 2020 - Current
                       <ul>
+                      	<li> Supervisor: Minje Kim </li>
                         <li> Project: Neural Audio Coding </li>
                       </ul>
                     <br>
@@ -194,10 +199,10 @@
                       Bloomington, IN• Aug 2018 – Mar 2019
                       <ul>
                         <li>
-                          Designed and developed work flows as well as python functions for geography visualization and visualization of keyword burst in the context of science of science.
+                          Supervisor: Katy Borner
                         </li>
                         <li>
-                          Text extraction and mining with Python.  
+                          Project: Mapping the co-evolution of artificial intelligence, robotics, and the internet of things over 20 years
                         </li>
                       </ul>
                       <br>
@@ -207,7 +212,7 @@
                        Beijing, China • Summer 2018
                       <ul>
                         <li>
-                          Website design and development for HR department
+                          Website design and development for Human Resource Team.
                         </li>
                       </ul>
                       <br>
@@ -217,7 +222,7 @@
                       Beijing, China • Summer 2016
                       <ul>
                         <li>
-                          Co-produced a data driven user study report with database and R in Telecom Group
+                          Data-driven user study reports producing for Telecom Team
                         </li>
                       </ul><br>
                 </ul>
